# Tetris

./: .gitignore  CLAUDE.md  README.md  audio.py  audio_manager.py  constants.py  controller_info.py  cpu_ai.py  debug_logger.py  debug_main.py  debug_start_game.py  final_full_test.py  final_test.py  font_manager.py  game.py  game_manager.py  index.html  input_manager.py  launch_game.py  main.py  pyproject.toml  quick_final_test.py  requirements.txt  run_game.bat  run_game.sh  run_game_windows.py  run_game_windows_old.py  run_game_windows_old2.py  safe_launcher.py  simple_test.py  test_audio_fix.py  test_bluetooth_debug.py  test_controller_optimization.py  test_font_loading.py  test_fonts.py  test_game.py  test_game_run.py  test_game_update.py  test_game_with_fonts.py  test_gamemanager_init.py  (+15 more)
.claude/: settings.local.json
assets/: README.md
