[project]
name = "tetris-multiplayer"
version = "1.0.0"
description = "Multiplayer Tetris game with controller support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
audio = ["numpy>=1.20.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"